--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_pages.scss
@@ -1,3 +1,9 @@
+.single-header--results {
+  padding: 20px 2rem;
+  background-color: $darkgray;
+  color: $white;
+}
+
 .single-header {
   padding: 10rem 0 $spacing-large;
   color: $white;
