--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_posts.scss
@@ -1,3 +1,55 @@
+.single-header--results {
+  padding: 20px 2rem;
+  background-color: $darkgray;
+  color: $white;
+}
+
+.single-header {
+  padding: 10rem 0 $spacing-large;
+  color: $white;
+  position: relative;
+  background-color: $gray;
+  overflow: hidden;
+
+  .single-photo {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    background-size: cover;
+    background-position: 50% 50%;
+    //filter: blur(0.23em);
+  }
+
+  .single-header-content {
+    background-color: $darkgray; // Fallback
+    background-color: $black-transparent-50;
+    width: auto;
+    max-width: 50%;
+    display: inline-block;
+    padding: $spacing-large $spacing-extra-large;
+    margin-bottom: 0;
+    position: relative;
+    z-index: 5;
+    text-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.25);
+  }
+}
+
+.single-photo-overlay {
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-image: url(../images/isometric-cubes.png);
+}
+
 .single header {
   @include box-shadow(none);
 }
