--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_header.scss
@@ -61,6 +61,11 @@
   width: 100%;
 }
 
+.nav-utility {
+  position: relative;
+  padding-right: 50px;
+}
+
 .banner_utility {
   padding: 0.5rem 3rem;
   background-color: $purple;
