--- a/wp-content/themes/ualbany/resources/assets/styles/main.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/main.scss
@@ -42,6 +42,7 @@
 @import "components/wp-classes";
 @import "components/wysiwyg";
 @import "layouts/header";
+@import "layouts/header-mobile-nav";
 @import "layouts/sidebar";
 @import "layouts/footer";
 @import "layouts/pages";
