--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_header-mobile-nav.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_header-mobile-nav.scss
@@ -1,10 +1,11 @@
-$zindex-mobile-nav:       10000;
-$zindex-mobile-underlay:  $zindex-mobile-nav - 1;
-$overlay-background:    rgba($black, 0.92);
-$blue-alt:              darken($brand-primary, 5);
-$blue-alt-dark:         darken($brand-primary, 10);
-$blue-alt-light:        lighten($brand-primary, 5);
-$secondary-menu-item-opacity:     0.7;
+$zindex-mobile-nav: 10000;
+$zindex-mobile-nav-toggle: 9999;
+$zindex-mobile-underlay: $zindex-mobile-nav - 1;
+$overlay-background: rgba($black, 0.92);
+$purple-alt: darken($brand-primary, 5);
+$purple-alt-dark: darken($brand-primary, 10);
+$purple-alt-light: lighten($brand-primary, 5);
+$secondary-menu-item-opacity: 0.7;
 
 body.mobile-nav-active {
   position: fixed;
@@ -15,14 +16,18 @@ body.mobile-nav-active {
 .nav-master-trigger {
   //display: inline-block;
   position: absolute;
-  top: 3px;
-  right: 0;
+  top: 12px;
+  right: 20px;
   width: 40px;
   height: 40px;
   margin-left: 0.5rem;
   opacity: 0.5;
   cursor: pointer;
   transition: all 200ms ease;
+
+  @media screen and (min-width: 1345px) {
+    right: 60px;
+  }
 
   &:hover {
     opacity: 1;
@@ -183,7 +188,7 @@ body.mobile-nav-active {
   }
 
   .nav-submenu-back {
-    background: $blue-alt-light;
+    background: $purple-alt-light;
   }
 
   .nav-submenu-back {
@@ -342,7 +347,7 @@ body.mobile-nav-active {
   }
 
   ul li.sub-active > ul.dropdown-menu {
-    background: $blue-alt;
+    background: $purple-alt;
     box-shadow: 0 0 3rem rgba($black, 0.25);
     display: block;
     height: 100%;
@@ -411,7 +416,7 @@ body.mobile-nav-active {
     }
 
     ul.dropdown-menu {
-      background: $blue-alt-dark;
+      background: $purple-alt-dark;
     }
   }
 }
