--- a/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
@@ -137,6 +137,10 @@ table.dataTable {
 }
 
 .dataTables_filter {
-  float: left;
+  width: 100%;
   margin-bottom: 1rem;
+
+  input {
+    width: 100%;
+  }
 }
