--- a/wp-content/themes/ualbany/resources/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/components/_buttons.scss
@@ -45,6 +45,10 @@ $button-seconary-color:   $brand-secondary;
   background-color: $purple;
   border-color: $purple;
 
+  &:visited {
+    color: $white;
+  }
+
   &:hover,
   &:active,
   &:focus {
