about page template

--- a/wp-content/themes/ualbany/resources/assets/styles/main.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/main.scss
@@ -41,6 +41,7 @@
 @import "components/video-ratio";
 @import "components/wp-classes";
 @import "components/wysiwyg";
+@import "layouts/about";
 @import "layouts/header";
 @import "layouts/header-mobile-nav";
 @import "layouts/sidebar";
