about page template styling

--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_about.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_about.scss
@@ -16,16 +16,12 @@
   }
 
   .section-staff {
-    .global-academic-programs-staff {
-      padding-bottom: 3rem;
-    }
+    background: $lightgray;
 
     .row {
-      padding-bottom: 3rem;
-
-      &:last-child {
-        padding-bottom: 0;
-      }
+      margin-bottom: 3rem;
+      background: $white;
+      padding: 15px 0;
     }
   }
 }
