about page template styling

--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_about.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_about.scss
@@ -6,6 +6,12 @@
     padding: 3rem 0;
   }
 
+  .section-body {
+    h3 {
+      width: 100%;
+    }
+  }
+
   .section-feature {
     background: $offwhite;
   }
