--- a/wp-content/themes/ualbany/resources/assets/styles/components/_juicer.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/components/_juicer.scss
@@ -1,3 +1,9 @@
+.page-id-1067 {
+  .feed-item {
+    margin-bottom: 3rem !important;
+  }
+}
+
 .juicer-feed {
   .referral {
     display: none !important;
@@ -22,7 +28,7 @@
     }
 
     .feed-item {
-      margin-bottom: 0 !important;
+      margin-bottom: 0;
     }
   }
 
