--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_about.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_about.scss
@@ -31,3 +31,77 @@
     }
   }
 }
+
+.cubes {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-size: cover;
+  background-position: 0 0;
+  background-image: url(../images/isometric-cubes.png);
+}
+
+.program-about {
+  background-color: $purple;
+  color: $white;
+
+  .container-intro {
+    padding: 3rem 0;
+  }
+
+  .container-tabs {
+    position: relative;
+    overflow: hidden;
+
+    .about-image {
+      position: absolute;
+      left: 0;
+      top: 0;
+      background-position: 0 50%;
+      background-size: cover;
+      background-repeat: no-repeat;
+      height: 100%;
+      width: 100%;
+      max-width: 76%;
+      z-index: 0;
+      opacity: 0.76;
+    }
+
+    .about-tabs {
+      padding: 2rem 0 3rem 3rem;
+      position: relative;
+      z-index: 1;
+      max-width: 67%;
+      margin-left: 33%;/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#46166b+0,46166b+100&0.85+0,1+100 */
+      background: -moz-linear-gradient(left, rgba($purple, 0.85) 0%, rgba($purple, 1) 50%); /* FF3.6-15 */
+      background: -webkit-linear-gradient(left, rgba($purple, 0.85) 0%, rgba($purple, 1) 50%); /* Chrome10-25,Safari5.1-6 */
+      background: linear-gradient(to right, rgba($purple, 0.85) 0%, rgba($purple, 1) 50%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    }
+
+    .nav-tabs {
+      margin-bottom: 2rem;
+      border-bottom: none;
+
+      .nav-item {
+        margin-left: 1rem;
+
+        &:first-child {
+          margin-left: 0;
+        }
+
+        .nav-link {
+          border-radius: 0 !important;
+          font-size: 1.15rem;
+          border: 2px solid $altpurple;
+          padding: 0.5rem 1rem;
+          color: $white;
+
+          &.active {
+            background-color: $altpurple !important;
+          }
+        }
+      }
+    }
+  }
+}
