--- a/wp-content/themes/ualbany/resources/assets/styles/main.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/main.scss
@@ -42,6 +42,7 @@
 @import "components/wp-classes";
 @import "components/wysiwyg";
 @import "layouts/about";
+@import "layouts/anchor";
 @import "layouts/header";
 @import "layouts/header-mobile-nav";
 @import "layouts/sidebar";
