--- a/wp-content/themes/ualbany/resources/assets/styles/main.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/main.scss
@@ -47,6 +47,7 @@
 @import "layouts/header-mobile-nav";
 @import "layouts/sidebar";
 @import "layouts/footer";
+@import "layouts/juicer";
 @import "layouts/pages";
 @import "layouts/page-home";
 @import "layouts/posts";
