--- a/wp-content/themes/ualbany/resources/assets/styles/main.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/main.scss
@@ -16,6 +16,7 @@
 /** Import theme styles */
 @import "common/global";
 @import "common/typography";
+@import "components/accordions";
 @import "components/buttons";
 @import "components/card-faculty-and-staff";
 @import "components/card-program";
