--- a/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_global.scss
@@ -46,7 +46,8 @@ h1.single-title {
   font-family: $font-headings;
   text-transform: uppercase;
   font-size: 4rem;
-  line-height: 1.2em;
+  letter-spacing: 0;
+  line-height: 4rem;
 }
 
 h2.single-subtitle {
