--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_about.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_about.scss
@@ -51,6 +51,7 @@
     position: relative;
     overflow: hidden;
     background-color: $purple;
+    min-height: 685px;
 
     .tab-content {
       margin-top: 7rem;
@@ -77,6 +78,7 @@
       margin: 0;
       background: url(../images/bg5.png) no-repeat left top;
       height: 100%;
+      min-height: 685px;
       margin-left: 500px;
       padding: 2rem 3rem;
 
