--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
@@ -20,7 +20,7 @@
     background-color: $darkgray; // Fallback
     background-color: $black-transparent-50;
     width: auto;
-    max-width: 50%;
+    max-width: 60%;
     display: inline-block;
     padding: $spacing-extra-large;
     position: relative;
@@ -33,24 +33,86 @@
     font-family: $font-headings;
     text-transform: uppercase;
     font-size: 4rem;
-    line-height: 1.2em;
+    line-height: 1em;
     margin-bottom: 1rem;
+    color: $white;
   }
 
   h3.front-subtitle {
-    font-family: $font-headings;
-    font-size: 1.8rem;
-    margin: 1rem 0;
+    font-family: $font-sans;
+    font-size: 1.5rem;
+    margin: 2rem 0 1rem;
+    font-weight: 400;
     opacity: 0.85;
     color: $white;
   }
 
   &__form {
+    padding: 0 2rem;
+
     select {
       margin-right: 1rem;
       margin-bottom: 15px;
-      max-width: 200px;
+      max-width: 160px;
+      font-weight: 700;
     }
+  }
+}
+
+table.bracket {
+  background-color: transparent;
+  border: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 1rem;
+  margin-top: 3rem;
+
+  tbody {
+    border: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  h3 {
+    margin: 0 !important;
+    padding: 0 1rem;
+    display: block;
+    white-space: nowrap;
+    margin-top: -1.5rem !important;
+    position: relative;
+  }
+
+  tr,
+  td {
+    background-color: transparent !important;
+    padding: 0;
+  }
+
+  .bracket-start {
+    border-left: 3px solid $gray;
+    border-top: 3px solid $gray;
+    line-height: 1rem;
+    padding: 0 !important;
+    margin: 0 !important;
+
+    div {
+      display: block;
+      width: 1rem;
+    }
+  }
+
+  .bracket-mid {
+    border-top: none;
+    position: relative;
+  }
+
+  .bracket-end {
+    width: 100%;
+    border-right: 3px solid $gray;
+    border-top: 3px solid $gray;
+    line-height: 1rem;
+    padding: 0 !important;
+    margin: 0 !important;
   }
 }
 
