--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_page-home.scss
@@ -27,6 +27,14 @@
     z-index: 5;
     text-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.25);
     margin-bottom: $spacing-small;
+
+    @include respondto(md) {
+      max-width: 80%;
+    }
+
+    @include respondto(sm) {
+      max-width: 100%;
+    }
   }
 
   h2.front-title {
@@ -38,23 +46,20 @@
     color: $white;
   }
 
-  h3.front-subtitle {
-    font-family: $font-sans;
-    font-size: 1.5rem;
-    margin: 2rem 0 1rem;
-    font-weight: 400;
-    opacity: 0.85;
-    color: $white;
-  }
-
   &__form {
-    padding: 0 2rem;
+    padding: 0 1rem;
+    white-space: nowrap;
+    margin-bottom: -2rem;
 
     select {
       margin-right: 1rem;
       margin-bottom: 15px;
-      max-width: 160px;
       font-weight: 700;
+      max-width: 140px;
+
+      &:last-child {
+        margin-right: 0;
+      }
     }
   }
 }
@@ -73,13 +78,19 @@ table.bracket {
     padding: 0;
   }
 
-  h3 {
+  h3.front-subtitle {
+    font-family: $font-sans;
+    font-size: 1.6em;
+    font-weight: 400;
+    opacity: 0.85;
+    color: $yellow;
     margin: 0 !important;
-    padding: 0 1rem;
-    display: block;
+    padding: 0 1rem 1rem;
+    display: inline-block;
     white-space: nowrap;
-    margin-top: -1.5rem !important;
+    margin-top: -1.15rem !important;
     position: relative;
+    overflow: hidden;
   }
 
   tr,
@@ -88,31 +99,57 @@ table.bracket {
     padding: 0;
   }
 
-  .bracket-start {
-    border-left: 3px solid $gray;
-    border-top: 3px solid $gray;
+  div.spacer {
+    display: block;
+    width: 1rem;
+  }
+
+  .bracket-start,
+  .bracket-bot-start {
+    border-left: 3px solid $yellow;
+    border-top: 3px solid $yellow;
     line-height: 1rem;
     padding: 0 !important;
     margin: 0 !important;
+  }
 
-    div {
-      display: block;
-      width: 1rem;
-    }
+  .bracket-bot-start {
+    border-top: none;
+    border-bottom: 3px solid $yellow;
   }
 
   .bracket-mid {
+    width: 1rem;
     border-top: none;
     position: relative;
   }
 
-  .bracket-end {
-    width: 100%;
-    border-right: 3px solid $gray;
-    border-top: 3px solid $gray;
+  .bracket-mid2 {
+    position: relative;
     line-height: 1rem;
     padding: 0 !important;
     margin: 0 !important;
+    border-top: 3px solid $yellow;
+  }
+
+  .bracket-bot-mid {
+    line-height: 1rem;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
+  .bracket-end,
+  .bracket-bot-end {
+    border-right: 3px solid $yellow;
+    border-top: 3px solid $yellow;
+    line-height: 1rem;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
+  .bracket-bot-end {
+    border-top: none;
+    border-bottom: 3px solid $yellow;
   }
 }
 
@@ -196,6 +233,8 @@ body.home {
 }
 
 #homepage-discover {
+  background-color: $offwhite;
+
   h2 {
     color: $midgray;
   }
