student story thumbs

--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_sidebar.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_sidebar.scss
@@ -6,10 +6,16 @@
   background-color: $offwhite;
   padding: 1rem;
   margin: 1rem 0;
+  position: relative;
+
+  &.has-thumb {
+    padding-left: 120px;
+  }
 
   h2 {
     font-size: 1rem;
     color: $gray;
+    margin: 0;
   }
 
   h3 {
@@ -27,5 +33,15 @@
   h5 {
     margin: 1rem 0 0;
     font-size: 1rem;
+  }
+
+  .featured-student-story--thumb {
+    position: absolute;
+    background-size: cover;
+    background-position: 50% 50%;
+    width: 100px;
+    height: 100%;
+    top: 0;
+    left: 0;
   }
 }
