updated student stories template

--- a/wp-content/themes/ualbany/resources/assets/styles/components/_accordions.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/components/_accordions.scss
@@ -39,4 +39,16 @@
       }
     }
   }
+
+  &.student-stories {
+    .card-body {
+      > .story {
+        margin-bottom: 3rem;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
 }
