--- a/wp-content/themes/ualbany/resources/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/layouts/_footer.scss
@@ -4,6 +4,17 @@ footer {
   margin: 0;
   min-height: 360px;
 
+  a,
+  a:visited {
+    color: $yellow;
+    font-weight: 700;
+  }
+
+  a:focus,
+  a:hover {
+    color: $yellow;
+  }
+
   .region-footer {
     margin-left: 360px;
     margin-top: 40px;
